# platform_training

./: .gitignore  README.md
project_euler/: CMakeLists.txt  main.cpp
project_euler/include/: helpers.hpp
project_euler/problems/: problem001.cpp  problem002.cpp  problem003.cpp  problem004.cpp  problem005.cpp  problem006.cpp  problem007.cpp  problem008.cpp  problem010.cpp  problem011.cpp  problem012.cpp
project_euler/src/: helpers.cpp
